Adding code of part 1 assignment date 02/09/2020

--- a/VehicleCatalogMVCAssignment/appsettings.json
+++ b/VehicleCatalogMVCAssignment/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": { "AppDBConnection": "Server=(localdb)\\mssqllocaldb;Database=VehicleDB;Trusted_Connection=True;MultipleActiveResultSets=True;" }
 }
